--- a/Security_Navigation_Web/WebContent/WEB-INF/web.xml
+++ b/Security_Navigation_Web/WebContent/WEB-INF/web.xml
@@ -9,4 +9,42 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <resource-ref>
+		<description>Oracle Datasource example</description>
+		<res-ref-name>jdbc/myoracle</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+	<servlet>
+    <servlet-name>AllController</servlet-name>
+    <servlet-class>controller.AllController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AllController</servlet-name>
+    <url-pattern>/cont</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>LoginSuccessView</servlet-name>
+    <servlet-class>view.LoginSuccessView</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginSuccessView</servlet-name>
+    <url-pattern>/loginSucc</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>UpdateSuccess</servlet-name>
+    <servlet-class>view.UpdateSuccess</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UpdateSuccess</servlet-name>
+    <url-pattern>/updateSucc</url-pattern>
+  </servlet-mapping>
+  <servlet>
+  	<servlet-name>MsgView</servlet-name>
+  	<servlet-class>view.MsgView</servlet-class>
+  </servlet>
+  <session-config>
+  	<session-timeout>10</session-timeout>
+  </session-config>
 </web-app>
